--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,14 @@
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
+  <meta content="Gestion de Asistencia" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta
     content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-  <title>CoreUI Free Angular Admin Template</title>
+  <title>Gestion de Asistencia</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
