Mejoras en nombres

--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,17 @@
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
+  <meta content="Gestión de visitas - Ceutc" name="description" />
   <meta content="Łukasz Holeczek" name="author" />
   <meta
-    content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
+    content="Gestion,Visitas"
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
   <title>Gestion de Visita - Ceutec</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+<noscript>Necesitas habilitar Javascript para correr esta app</noscript>
 <app-root>
   <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
     <i class="spinner-grow spinner-grow-sm"></i>
